--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,6 @@ google_analytics: 'UA-9631196-1'
 # Build settings
 markdown: kramdown
 timezone: America/Sao_Paulo
+
+
+#icones estão em http://www.flaticon.com/packs/
